--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <h1 class="a b" ;>Titulo</h1>
-    <a class="botaotop" ; href="https://www.youtube.com/">CLIQUE AQUI</a>
+    <a class="botaotop" ; href="https://youtu.be/dQw4w9WgXcQ">CLIQUE AQUI</a>
     <button class="botaotop" ; id="botao" onclick="mudartexto()">Carioca</button>
   </body>
 </html>
