--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="h-[100vh] min-h-[100vh] bg-gradient-to-bl from-gray-800 via-gray-900 to-black flex items-center text-gray-300 px-[3.5rem]" id="home">
-      <h1 class="text-6xl opacity-0">
+      <h1 class="md:text-6xl text-3xl opacity-0">
         Oi, meu nome é <span class="text-transparent bg-clip-text bg-gradient-to-tl from-green-700 to-cyan-300">Antonio Marcos</span>.
         <br>
         E eu sou um desenvolvedor :)
