--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 <body>
     <div class="h-[100vh] min-h-[100vh] bg-gradient-to-bl from-gray-800 via-gray-900 to-black flex items-center text-center md:text-left text-gray-300 px-[3.5rem]" id="home">
       <h1 class="md:text-6xl text-4xl opacity-0">
-        Oi, meu nome é <span class="text-transparent bg-clip-text bg-gradient-to-tl from-green-700 to-cyan-300">Antonio Marcos</span>.
+        Oi, meu nome é <span class="text-transparent bg-clip-text bg-gradient-to-tl from-green-700 to-cyan-300">Antonio Marcos</span>,
         <br>
-        E eu sou um desenvolvedor :)
+        E eu sou um desenvolvedor Full-Stack :)
       </h1>
+      <a class="border text-transparent border-transparent bg-clip-text bg-gradient-to-tl from-green-700 to-cyan-300 mt-4" href="#about-me">Saiba Mais</a>
     </div>
 </body>
