--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="./src/js/main.js"></script>
 </head>
 <body>
-    <div class="h-[100vh] min-h-[100vh] bg-gradient-to-bl from-gray-800 via-gray-900 to-black flex items-center text-center md:text-left text-gray-300 px-[3.5rem]" id="home">
+    <div class="h-[100vh] min-h-[100vh] bg-gradient-to-bl from-gray-800 via-gray-900 to-black flex flex-wrap items-center text-center md:text-left text-gray-300 px-[3.5rem]" id="home">
       <h1 class="md:text-6xl text-4xl opacity-0">
         Oi, meu nome é <span class="text-transparent bg-clip-text bg-gradient-to-tl from-green-700 to-cyan-300">Antonio Marcos</span>,
         <br>
