--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
         <br>
         E eu sou um desenvolvedor Full-Stack :)
       </h1>
-      <a class="border text-transparent border-transparent bg-clip-text bg-gradient-to-tl from-green-700 to-cyan-300 opacity-0" href="#about-me">Saiba Mais</a>
+      <!-- <a class="border text-transparent border-transparent bg-clip-text bg-gradient-to-tl from-green-700 to-cyan-300 opacity-0" href="#about-me">Saiba Mais</a> -->
     </div>
 </body>
