--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site do Marcos :)</title>
+    <title>Site do Marcos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
       <h1 class="md:text-6xl text-4xl opacity-0 my-auto py-auto">
         Oi, meu nome é <span class="text-transparent bg-clip-text bg-gradient-to-tl from-green-700 to-cyan-300">Antonio Marcos</span>,
         <br>
-        E eu sou um desenvolvedor Full-Stack :)
+        E eu sou um desenvolvedor Full-Stack
       </h1>
       <!-- <a class="border text-transparent border-transparent bg-clip-text bg-gradient-to-tl from-green-700 to-cyan-300 opacity-0" href="#about-me">Saiba Mais</a> -->
     </div>
